Add landing page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="refresh" content="0; url=chapter1.html" />
-  <title>Redirecting…</title>
+  <title>Learning — Design Patterns Notes</title>
+  <link rel="stylesheet" href="chapter1.css" />
 </head>
 <body>
-  <p>Redirecting to <a href="chapter1.html">Chapter 1</a>…</p>
+  <main class="page">
+    <header class="hero">
+      <p class="eyebrow">Learning Project</p>
+      <h1>Design Patterns — Chapter Summaries</h1>
+      <p class="lead">
+        My goal is to read the book and create a clear HTML/CSS page for each chapter,
+        so engineers can quickly understand the key ideas and improve their skills.
+      </p>
+      <div class="cta">
+        <a class="button" href="chapter1.html">Read Chapter 1</a>
+        <p class="muted small">Next chapters will be added here.</p>
+      </div>
+    </header>
+  </main>
 </body>
 </html>
