--- a/index.html
+++ b/index.html
@@ -12,14 +12,30 @@
       <p class="eyebrow">Learning Project</p>
       <h1>Design Patterns — Chapter Summaries</h1>
       <p class="lead">
-        My goal is to read the book and create a clear HTML/CSS page for each chapter,
-        so engineers can quickly understand the key ideas and improve their skills.
+        My objective is to study the book and publish a concise HTML/CSS summary for
+        each chapter, enabling engineers to grasp the core concepts quickly and build
+        stronger professional skills.
       </p>
       <div class="cta">
         <a class="button" href="chapter1.html">Read Chapter 1</a>
         <p class="muted small">Next chapters will be added here.</p>
       </div>
     </header>
+
+    <section class="section">
+      <h2>Project Objective</h2>
+      <p>
+        This platform exists to help engineers save time by focusing on the key design
+        principles rather than long theory. It provides structured explanations, diagrams,
+        and practical reasoning so core concepts can be understood quickly without reading
+        the entire book.
+      </p>
+      <ul>
+        <li>Time‑saving summaries centered on essential principles</li>
+        <li>Clear, structured explanations with diagrams</li>
+        <li>Practical reasoning to connect ideas to real software design</li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
